@@ -17,6 +17,9 @@ perl = v5.8.5
 Compress::Zlib = 1.0
 Font::TTF = 0
 
+[Prereqs / TestRequires]
+Test::Memory::Cycle = 0
+
 [OSPrereqs / MSWin32]
 Win32::TieRegistry = 0
 
